tests/dev_server/errors/stories/js_module_export_not_found/main.js
// there is a deliberate typo: "answerr" with 2 r instead of "answer"
// eslint-disable-next-line import/named
import { answerr } from "./foo.js"

console.log(answerr)
